# Rustmius

./: .gitignore  Cargo.toml  PKGBUILD  PKGBUILD-BIN  README.md  eslint.config.js  knip.json  package-lock.json  package.json  rustmius.desktop  scratch.rs  tsconfig.json  vite.config.ts
.cargo/: config.toml
.changeset/: terminal-color-theming.md
.github/: dependabot.yml
.github/scripts/: aur-bin.sh
.github/workflows/: aur.yml  check.yml  ci.yml  pr.yml  release.yml
docs/plans/: 2026-04-05-remote-file-explorer.md  2026-04-05-robust-alias-management.md  2026-04-05-rustmius-design.md  2026-04-05-rustmius-mvp-0-8.md  2026-04-05-rustmius-native-ui.md  2026-04-05-server-management.md
github/workflows/: ci.yml
src/: App.vue  config_observer.rs  index.css  main.rs  main.ts  sftp_engine.rs  ssh_engine.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/class/: Class.ts  Server.ts
src/components/: AppSidebar.vue  AppTopbar.vue.temp  DockerCard.vue  ServerCard.vue  ServerHeader.vue  ServerToolCard.vue  ThemeSwitch.vue.temp
src/components/modal/: EditServerModal.vue  NewServerModal.vue
src/core/ssh/: CommandQueue.ts  EventBus.ts  SSHManager.ts  SSHSession.ts  types.ts
src/engines/: docker.rs  mod.rs  monitor.rs  sftp.rs  ssh.rs
src/pages/: home.vue  keys.vue  settings.vue
src/pages/server/: console.vue  docker.vue  index.vue  monitor.vue
src/router/: index.ts
src/service/: history.rs  layout.rs  mod.rs  notifications.rs  settings.rs  ssh_config.rs  ssh_keys.rs
src/stores/: consoles.ts  keys.ts  serverInstance.ts  serverInstances.ts  servers.ts  tabs.ts
src/test/: setup.ts
src/test/class/: Server.test.ts
src/types/: key.d.ts  server.d.ts
src/ui/: add_server_dialog.rs  bus.rs  docker.rs  file_explorer.rs  hud.rs  mod.rs  monitor.rs  server_list.rs  ssh_keys.rs  style.rs  theme.rs  window.rs
(+47 files in other folders)
