[package]
name = "rustmius"
version = "2.0.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_12"] }
vte4 = "0.9"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
nucleo-matcher = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
directories = "5.0"
oo7 = "0.6"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
