[package]
name = "rustmius"
version = "2.4.3"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_12"] }
vte4 = "0.9"
ssh2 = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
directories = "6.0"
oo7 = "0.6"
zeroize = "1"
chrono = "0.4"
cairo-rs = { version = "0.22", features = ["use_glib"] }
serde_json = "1.0.150"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
